# aginxium

./: Cargo.toml  README.md  build-android.sh  uniffi.toml
examples/: connect.rs
src/: error.rs  event.rs  ffi.rs  lib.rs
src/agent/: mod.rs
src/connection/: manager.rs  mod.rs
src/protocol/: acp.rs  jsonrpc.rs  mod.rs
src/session/: mod.rs  stream.rs
src/transport/: mod.rs  relay.rs  tcp.rs
