[package]
name = "aginxium"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Yinnho Team"]
license = "MIT"
description = "Aginix 客户端引擎 - Agent Protocol 的 Chromium"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["ffi"]

[features]
default = []
ffi = ["uniffi"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "sync", "time", "rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

# TLS (rustls — pure Rust, no C dependencies, works on all platforms including Android)
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring", "std"], default-features = false }
rustls-pki-types = "1"
webpki-roots = "0.26"

# UniFFI (optional, for FFI bindings)
uniffi = { version = "0.28", features = ["tokio", "cli"], optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
